<resources>
    <string name="app_name">BebyRong</string>
    <string name="access_location_not_allowed">Access Location Not Allowed</string>
    <string name="retry">Retry</string>
    <string name="start">Mulai</string>
    <string name="onboard_title1">Baca Berita</string>
    <string name="onboard_title2">Pilih Komoditas</string>
    <string name="onboard_title3">Lokasi Pasar</string>
    <string name="onboard_message1">Baca berita ketahanan pangan terbaru,\nlebih akurat dan terpercaya</string>
    <string name="onboard_message2">Beli produk komoditas\npetani lorong</string>
    <string name="onboard_message3">Pantau harga pangan\ndi lokasi pasar sekitar</string>
    <string name="home">Beranda</string>
    <string name="news">Berita</string>
    <string name="commodity">Komoditas</string>
    <string name="stock">Stok</string>
    <string name="price">Harga Pangan</string>
    <string name="show_all">Lihat Semua</string>
    <string name="all">Semua</string>
    <string name="search_news">Cari Berita</string>
    <string name="disconnect">Tidak dapat tersambung ke server</string>
    <string name="load_more">Memuat…</string>
    <string name="write_comment">Beri Komentar…</string>
    <string name="search_commodity">Cari Komoditas</string>
    <string name="harvest_schedule">Jadwal Panen</string>
    <string name="production">Produksi</string>
    <string name="detail">Detail</string>
    <string name="search_farmers">Cari Kelompok Petani</string>
    <string name="data_profile">Data Profile</string>
    <string name="name">Nama</string>
    <string name="lead_farmers">Ketua Kelompok Tani</string>
    <string name="address">Alamat</string>
    <string name="product">Produk</string>
    <string name="phone">Telepon</string>
    <string name="location">Lokasi</string>
    <string name="market_traditional">Pasar Tradisional</string>
    <string name="market_modern">Pasar Modern</string>
    <string name="stock_info">Info Stok</string>
    <string name="search_market_name">Cari Nama Pasar</string>
    <string name="month">Bulan</string>
    <string name="highest">Tertinggi/Terendah</string>
    <string name="year">Tahun</string>
    <string name="no_data">Data tidak tersedia</string>
    <string name="market_location">Lokasi Pasar</string>
    <string name="price_detail">Detail Harga Pangan</string>
    <string name="detail_news">Detail Berita</string>
    <string name="search_market">Cari pasar</string>
    <string name="app_desc">Aplikasi Ketahanan Pangan</string>
    <string name="city_name">Kota Makassar</string>
    <string name="copyright">Powered by © 2019 Dinas Ketahanan Pangan Kota Makassar\nAll Right Reserved</string>
    <string name="about">Tentang</string>
    <string name="skip">Lewati</string>
    <string name="next">Selanjutnya</string>
</resources>
