<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp120"
                android:layout_height="@dimen/dp120"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/app_desc"
                android:textSize="@dimen/text_size_extra_large"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_name"
                android:textSize="@dimen/text_size_large_x"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:gravity="center"
                android:text="@string/copyright" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:layout_marginTop="@dimen/dp120"
                android:gravity="center"
                android:src="@drawable/ic_makassar" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>