<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_onboarding"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_indicator"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/dp64"
            android:paddingRight="@dimen/dp64"
            android:layout_marginBottom="?attr/actionBarSize"
            android:text="@string/start"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skip"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginBottom="@dimen/dp36"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/dark"
            android:visibility="visible" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginBottom="?attr/actionBarSize"
            android:gravity="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginBottom="@dimen/dp36"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/dark" />
    </RelativeLayout>

</layout>